--- a/TestCallCenterLeha/TestCallCenterLeha.csproj
+++ b/TestCallCenterLeha/TestCallCenterLeha.csproj
@@ -7,4 +7,8 @@
     <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Telegram.Bot" Version="19.0.0" />
+  </ItemGroup>
+
 </Project>
